--- a/pom.xml
+++ b/pom.xml
@@ -35,24 +35,32 @@
     <version>5.8.1</version> <!-- Use the latest version available -->
     <scope>test</scope>
 </dependency>
+
 <dependency>
     <groupId>org.junit.jupiter</groupId>
     <artifactId>junit-jupiter-engine</artifactId>
     <version>5.8.1</version>
     <scope>test</scope>
 </dependency>
+
+<dependency>
+    <groupId>org.junit.jupiter</groupId>
+    <artifactId>junit-jupiter-params</artifactId>
+    <version>5.8.2</version> <!-- Use the latest version -->
+    <scope>test</scope>
+</dependency>
     
-  </dependencies>
-  <build>
-    <plugins>
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <version>3.0.0-M5</version> <!-- Use the latest version available -->
-            <configuration>
-                <!-- Optional configuration here -->
-            </configuration>
-        </plugin>
-    </plugins>
-</build>
+	</dependencies>
+	  <build>
+	    <plugins>
+	        <plugin>
+	            <groupId>org.apache.maven.plugins</groupId>
+	            <artifactId>maven-surefire-plugin</artifactId>
+	            <version>3.0.0-M5</version> <!-- Use the latest version available -->
+	            <configuration>
+	                <!-- Optional configuration here -->
+	            </configuration>
+	        </plugin>
+	    </plugins>
+	</build>
 </project>
